src/components/ticket/dialogs/inputs/article-input-attachment/style.less
.file-upload {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 2rem max-content;
    grid-column-gap: @margin-default;
    align-items: center;
    >.file-upload-button {
        width: 100%;
        .file-upload-input {
            display: none;
        }
    }
    >.file-upload-notice {
        width: 100%;
        display: grid;
        grid-template-columns: max-content auto max-content;
        grid-gap: .25rem;
        align-items: center;
        grid-template-rows: 2rem;
        color: @secondary-1;
        >.file-upload-line {
            background-color: @secondary-3;
            height: 1px;
            margin-top: .375rem;
        }
        >.minimize-icon-container {
            margin: .375rem 0 0 .75rem;
            [class^="kix-icon-"].no-files,
            [class*=" kix-icon-"].no-files {
                color: @secondary-3;
            }
        }
    }
    >.file-upload-file-list {
        .font-size-normal();
        box-sizing: border-box;
        border: 1px solid @secondary-3;
        border-radius: @border-radius;
        padding: .25rem;
        background-color: @secondary-6;
        min-height: @default-input-height;
        color: @default-dark-font-color;
        grid-column: 1 / span 2;
        margin: @margin-small @default-button-icon-width 0;
        >.file-upload-file-container {
            height: 1.5rem;
            overflow: hidden;
            margin-right: .25rem;
            display: inline-block;
            >.file-upload-file {
                display: grid;
                grid-auto-flow: column;
                align-items: center;
                grid-gap: @margin-small;
                grid-template-rows: 1.5rem;
                background-color: @secondary-5;
                border-radius: @border-radius;
                padding: 0 @margin-small;
                white-space: nowrap;
                span:first-child[class^="kix-icon-"],
                span:first-child[class*=" kix-icon-"] {
                    font-size: .875rem;
                }
                .file-name {
                    align-self: end;
                    overflow: hidden;
                    text-overflow: ellipsis;
                }
                .kix-icon-close {
                    font-size: .75rem;
                    color: @secondary-2;
                    cursor: pointer;
                    &:hover {
                        color: darken(@secondary-2, 20%);
                    }
                }
            }
        }
    }
    &.dragging {
        border: 2px dotted @secondary-3;
        border-radius: @border-radius;
        padding: @margin-small;
    }
}

